# TradeManV1

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  100Tests.csv  AmiPy.json  NSE.csv  README.md  Tr00.json  TradeManV1.md  Withdrawals.csv  firebase_adapter.py  firebase_credentials.json  firebase_db_upload.py  mock_error_log_path  pyproject.toml  requirements.txt  sample.env  strategy_format_14Jan24.json  strategy_sample.json  test_example.py  trades_transactions.csv  trial.py  user_format_14Jan24.json  user_sample.json
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
Data/UserSQLDB/: Tr00.db  Tr02.db  Tr03.db
Executor/: Executor.md
Executor/ExecutorDashBoard/: ExecutorDashBoard.md  ExecutorDashBoardUtils.py  (+11 more)
IntegrationTest/: Integration_test_daily_login1.py  integration_test_daily_login.py  strategies_test.py
IntegrationTests/: test_integration_daily_login.py
MarketInfo/: MarketInfo.md
SampleData/: StrategyCard.json  Tr00.json  UserCard.json  UserProfile.json  aliceblue_orders.json  kite_orders.json  market_info_sample.json  order_detail.json
TestData/: amipy_place_orders_mock.json
UnitTests/: Instrument_TestData.json  test_alice_adapter.py  test_broker_center_utils.py  test_eod_report_utils.py  test_exe_utils.py  test_exefirebase_utils.py  test_exesql_utils.py  test_fast_api.py  test_instrument_center_utils.py  test_logger_utils.py  test_merge_ins_csv_file.py  test_order_center_utils.py  test_strategies_utils.py  test_zerodha_adapter.py
User/: User.md  main.py
api/: main.py
testing/: test_error_logging_page.py
(+356 files in other folders)
